Match up with cm10 defconfig

--- a/arch/arm/configs/crpalmer_defconfig
+++ b/arch/arm/configs/crpalmer_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.4.37 Kernel Configuration
+# Linux/arm 3.4.41 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -92,9 +92,6 @@ CONFIG_RESOURCE_COUNTERS=y
 # CONFIG_CGROUP_MEM_RES_CTLR is not set
 # CONFIG_CGROUP_PERF is not set
 # CONFIG_CGROUP_SCHED is not set
-CONFIG_FAIR_GROUP_SCHED=y
-# CONFIG_CFS_BANDWIDTH is not set
-# CONFIG_RT_GROUP_SCHED is not set
 # CONFIG_BLK_CGROUP is not set
 # CONFIG_CHECKPOINT_RESTORE is not set
 # CONFIG_NAMESPACES is not set
@@ -331,7 +328,6 @@ CONFIG_ARCH_APQ8064=y
 # CONFIG_MACH_ELITE is not set
 # CONFIG_MACH_VILLE is not set
 # CONFIG_MACH_JET is not set
-# CONFIG_MACH_JEWEL_DD is not set
 # CONFIG_ARCH_FSM9XXX is not set
 # CONFIG_ARCH_MSM9615 is not set
 # CONFIG_ARCH_MSM8625 is not set
@@ -422,6 +418,7 @@ CONFIG_MSM_DSPS=y
 CONFIG_MSM_IPC_ROUTER=y
 CONFIG_MSM_IPC_ROUTER_SMD_XPRT=y
 # CONFIG_MSM_DALRPC is not set
+# CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
 CONFIG_MSM_CPU_FREQ_SET_DEFAULT_MIN_MAX=y
 CONFIG_MSM_CPU_FREQ_DEFAULT_MAX=1512000
 CONFIG_MSM_CPU_FREQ_DEFAULT_MIN=384000
@@ -469,7 +466,7 @@ CONFIG_MSM_SSR_INDEPENDENT=y
 # CONFIG_MSM_WCNSS_SSR_ENABLE is not set
 # CONFIG_MSM_WCNSS_SSR_8960 is not set
 # CONFIG_MSM_GSS_SSR_8064 is not set
-# CONFIG_MSM_BUSPM_DEV is not set
+CONFIG_MSM_BUSPM_DEV=m
 CONFIG_MSM_TZ_LOG=y
 CONFIG_MSM_RPM_LOG=y
 CONFIG_MSM_RPM_STATS_LOG=y
@@ -514,15 +511,12 @@ CONFIG_MSM_L1_ERR_LOG=y
 # CONFIG_MSM_L2_ERP_PRINT_ACCESS_ERRORS is not set
 # CONFIG_MSM_L2_ERP_1BIT_PANIC is not set
 CONFIG_MSM_L2_ERP_2BIT_PANIC=y
-# CONFIG_MSM_DCVS is not set
+CONFIG_MSM_DCVS=y
 CONFIG_HAVE_ARCH_HAS_CURRENT_TIMER=y
 # CONFIG_MSM_CACHE_DUMP is not set
 CONFIG_MSM_HSIC_SYSMON=y
 # CONFIG_MSM_HSIC_SYSMON_TEST is not set
 CONFIG_MACH_MONARUDO=y
-# CONFIG_MACH_DELUXE_J is not set
-# CONFIG_MACH_DELUXE_U is not set
-# CONFIG_MACH_DELUXE_UL is not set
 CONFIG_HTC_HEADSET_ONE_WIRE=y
 CONFIG_SUPPORT_USB_SPEAKER=y
 CONFIG_SENSE_4_PLUS=y
@@ -1116,25 +1110,32 @@ CONFIG_HAVE_BPF_JIT=y
 # CONFIG_CAN is not set
 # CONFIG_IRDA is not set
 CONFIG_BT=y
-# CONFIG_BT_RFCOMM is not set
-# CONFIG_BT_BNEP is not set
+CONFIG_BT_RFCOMM=y
+CONFIG_BT_RFCOMM_TTY=y
+CONFIG_BT_BNEP=y
+CONFIG_BT_BNEP_MC_FILTER=y
+CONFIG_BT_BNEP_PROTO_FILTER=y
 CONFIG_BT_HIDP=y
 
 #
 # Bluetooth device drivers
 #
-# CONFIG_BT_HCISMD is not set
+CONFIG_BT_HCISMD=y
 # CONFIG_BT_HCIBTUSB is not set
 # CONFIG_BT_HCIBTSDIO is not set
-# CONFIG_BT_HCIUART is not set
+CONFIG_BT_HCIUART=y
+CONFIG_BT_HCIUART_H4=y
+# CONFIG_BT_HCIUART_BCSP is not set
+# CONFIG_BT_HCIUART_ATH3K is not set
+# CONFIG_BT_HCIUART_LL is not set
+# CONFIG_BT_HCIUART_IBS is not set
 # CONFIG_BT_HCIBCM203X is not set
 # CONFIG_BT_HCIBPA10X is not set
 # CONFIG_BT_MSM_SLEEP is not set
 # CONFIG_BT_HCIBFUSB is not set
 # CONFIG_BT_HCIVHCI is not set
 # CONFIG_BT_MRVL is not set
-CONFIG_MSM_BT_POWER=y
-CONFIG_BT_HID_BRCM=y
+# CONFIG_MSM_BT_POWER is not set
 # CONFIG_AF_RXRPC is not set
 CONFIG_FIB_RULES=y
 CONFIG_WIRELESS=y
@@ -1190,7 +1191,9 @@ CONFIG_REGMAP_SPI=y
 CONFIG_DMA_SHARED_BUFFER=y
 CONFIG_GENLOCK=y
 CONFIG_GENLOCK_MISCDEVICE=y
-# CONFIG_SYNC is not set
+CONFIG_SYNC=y
+CONFIG_SW_SYNC=y
+# CONFIG_SW_SYNC_USER is not set
 # CONFIG_CMA is not set
 # CONFIG_CONNECTOR is not set
 # CONFIG_MTD is not set
@@ -1503,15 +1506,17 @@ CONFIG_WLAN=y
 # CONFIG_ATH6K_LEGACY_EXT is not set
 # CONFIG_WCNSS_CORE is not set
 # CONFIG_ATH_COMMON is not set
-# CONFIG_BCMDHD is not set
+CONFIG_BCMDHD=m
 CONFIG_BCMDHD_FW_PATH="/system/etc/firmware/fw_bcm4334.bin"
-CONFIG_BCMDHD_NVRAM_PATH="/etc/calibration"
+CONFIG_BCMDHD_NVRAM_PATH="/system/etc/calibration.gpio4"
+# CONFIG_DHD_USE_STATIC_BUF is not set
+# CONFIG_DHD_USE_SCHED_SCAN is not set
 # CONFIG_BRCMFMAC is not set
 # CONFIG_HOSTAP is not set
 # CONFIG_IWM is not set
 # CONFIG_LIBERTAS is not set
 # CONFIG_MWIFIEX is not set
-CONFIG_BCMDHD_4334=m
+# CONFIG_BCMDHD_4334 is not set
 CONFIG_HTC_IGNORE_SKB_ALIGNMENT=y
 # CONFIG_BCMDHD_4335 is not set
 
@@ -1729,8 +1734,10 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_SERIAL_MAX3107 is not set
 CONFIG_SERIAL_CORE=y
 CONFIG_SERIAL_CORE_CONSOLE=y
-# CONFIG_SERIAL_MSM is not set
+CONFIG_SERIAL_MSM=y
+# CONFIG_SERIAL_MSM_CONSOLE is not set
 CONFIG_SERIAL_MSM_HS=y
+# CONFIG_SERIAL_MSM_CLOCK_CONTROL is not set
 CONFIG_SERIAL_MSM_HSL=y
 # CONFIG_SERIAL_IRDA is not set
 # CONFIG_SERIAL_CIR is not set
@@ -2359,12 +2366,10 @@ CONFIG_MSM_KGSL=y
 # CONFIG_MSM_KGSL_PSTMRTMDMP_NO_IB_DUMP is not set
 # CONFIG_MSM_KGSL_PSTMRTMDMP_RB_HEX is not set
 CONFIG_MSM_KGSL_2D=y
-CONFIG_KGSL_PER_PROCESS_PAGE_TABLE=y
+# CONFIG_KGSL_PER_PROCESS_PAGE_TABLE is not set
 CONFIG_MSM_KGSL_PAGE_TABLE_SIZE=0xFFF0000
-CONFIG_MSM_KGSL_PAGE_TABLE_SIZE_FOR_IOMMU=0x1fe00000
 CONFIG_MSM_KGSL_MMU_PAGE_FAULT=y
 # CONFIG_MSM_KGSL_DISABLE_SHADOW_WRITES is not set
-# CONFIG_MSM_KGSL_GPU_USAGE is not set
 # CONFIG_VGASTATE is not set
 # CONFIG_VIDEO_OUTPUT_CONTROL is not set
 CONFIG_FB=y
@@ -2425,7 +2430,7 @@ CONFIG_FB_MSM_MDP40=y
 # CONFIG_FB_MSM_MDDI is not set
 CONFIG_FB_MSM_MIPI_DSI=y
 # CONFIG_FB_MSM_LCDC is not set
-CONFIG_FB_MSM_LVDS=y
+# CONFIG_FB_MSM_LVDS is not set
 CONFIG_FB_MSM_OVERLAY=y
 # CONFIG_MSM_AUTOBL_ENABLE is not set
 CONFIG_FB_MSM_DTV=y
@@ -2439,13 +2444,10 @@ CONFIG_FB_MSM_DTV=y
 # CONFIG_FB_MSM_LCDC_AUTO_DETECT is not set
 # CONFIG_FB_MSM_LCDC_PANEL is not set
 # CONFIG_FB_MSM_MIPI_DSI_TOSHIBA is not set
-CONFIG_FB_MSM_MIPI_DSI_RENESAS is not set
-# CONFIG_FB_MSM_MIPI_DSI_TRULY is not set
+CONFIG_FB_MSM_MIPI_DSI_RENESAS=y
 # CONFIG_FB_MSM_MIPI_DSI_SIMULATOR is not set
 # CONFIG_FB_MSM_MIPI_DSI_NOVATEK is not set
-# CONFIG_FB_MSM_MIPI_DSI_NT35510 is not set
 # CONFIG_FB_MSM_MIPI_DSI_ORISE is not set
-# CONFIG_FB_MSM_MIPI_DSI_TC358764_DSI2LVDS is not set
 # CONFIG_FB_MSM_LCDC_ST15_WXGA is not set
 # CONFIG_FB_MSM_LCDC_ST15_PANEL is not set
 # CONFIG_FB_MSM_LCDC_PRISM_WVGA is not set
@@ -2461,8 +2463,8 @@ CONFIG_FB_MSM_MIPI_DSI_RENESAS is not set
 # CONFIG_FB_MSM_LCDC_SAMSUNG_OLED_PT is not set
 # CONFIG_FB_MSM_LCDC_NT35582_WVGA is not set
 # CONFIG_FB_MSM_LCDC_WXGA is not set
-CONFIG_FB_MSM_LVDS_CHIMEI_WXGA=y
-CONFIG_FB_MSM_LVDS_FRC_FHD=y
+# CONFIG_FB_MSM_LVDS_CHIMEI_WXGA is not set
+# CONFIG_FB_MSM_LVDS_FRC_FHD is not set
 # CONFIG_FB_MSM_MIPI_TOSHIBA_VIDEO_WVGA_PT is not set
 # CONFIG_FB_MSM_MIPI_TOSHIBA_VIDEO_WSVGA_PT is not set
 # CONFIG_FB_MSM_MIPI_TOSHIBA_VIDEO_WUXGA is not set
@@ -2478,7 +2480,6 @@ CONFIG_FB_MSM_MIPI_RENESAS_VIDEO_FWVGA_PT=y
 # CONFIG_FB_MSM_MIPI_NT35516_CMD_QHD_PT is not set
 # CONFIG_FB_MSM_MIPI_CHIMEI_WXGA is not set
 # CONFIG_FB_MSM_MIPI_CHIMEI_WUXGA is not set
-# CONFIG_FB_MSM_MIPI_TRULY_VIDEO_WVGA_PT is not set
 # CONFIG_FB_MSM_MIPI_SIMULATOR_VIDEO is not set
 CONFIG_FB_MSM_NO_MDP_PIPE_CTRL=y
 CONFIG_FB_MSM_OVERLAY0_WRITEBACK=y
@@ -2549,7 +2550,16 @@ CONFIG_FB_MSM_DEFAULT_DEPTH_RGBA8888=y
 # CONFIG_MSM_ALT_DSI_ESCAPE_CLOCK is not set
 # CONFIG_EXYNOS_VIDEO is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
-# CONFIG_LCD_CLASS_DEVICE is not set
+CONFIG_LCD_CLASS_DEVICE=m
+# CONFIG_LCD_L4F00242T03 is not set
+# CONFIG_LCD_LMS283GF05 is not set
+# CONFIG_LCD_LTV350QV is not set
+# CONFIG_LCD_TDO24M is not set
+# CONFIG_LCD_VGG2432A4 is not set
+# CONFIG_LCD_PLATFORM is not set
+# CONFIG_LCD_S6E63M0 is not set
+# CONFIG_LCD_LD9040 is not set
+# CONFIG_LCD_AMS369FG06 is not set
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 CONFIG_BACKLIGHT_GENERIC=y
 # CONFIG_BACKLIGHT_ADP8860 is not set
@@ -3160,6 +3170,7 @@ CONFIG_HAVE_CLK_PREPARE=y
 #
 CONFIG_IOMMU_SUPPORT=y
 CONFIG_MSM_IOMMU=y
+CONFIG_MSM_IOMMU_GPU_SYNC=y
 CONFIG_IOMMU_PGTABLES_L2=y
 
 #
