--- a/arch/arm/configs/dlx_defconfig
+++ b/arch/arm/configs/dlx_defconfig
@@ -343,8 +343,7 @@ CONFIG_MSM_RPM=y
 CONFIG_MSM_MPM=y
 CONFIG_MSM_XO=y
 CONFIG_MSM_REMOTE_SPINLOCK_SFPB=y
-CONFIG_PERFLOCK=y
-# CONFIG_PERFLOCK_BOOT_LOCK is not set
+# CONFIG_PERFLOCK is not set
 
 #
 # MSM Board Selection
@@ -749,7 +748,7 @@ CONFIG_PM=y
 CONFIG_PM_CLK=y
 CONFIG_CPU_PM=y
 # CONFIG_SUSPEND_TIME is not set
-CONFIG_HTC_PNPMGR=y
+# CONFIG_HTC_PNPMGR is not set
 CONFIG_ADAPTIVE_TUNING=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM_CPU_SUSPEND=y
