defconfig; [WIP] disable undervolting

--- a/arch/arm/configs/crpalmer_defconfig
+++ b/arch/arm/configs/crpalmer_defconfig
@@ -424,7 +424,7 @@ CONFIG_MSM_CPU_FREQ_DEFAULT_MAX=1512000
 CONFIG_MSM_CPU_FREQ_DEFAULT_MIN=384000
 CONFIG_SIMPLE_PLUG=y
 # CONFIG_SIMPLE_PLUG_STATS is not set
-CONFIG_CPU_VOLTAGE_TABLE=y
+# CONFIG_CPU_VOLTAGE_TABLE is not set
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
 CONFIG_AMSS_7X25_VERSION_2009=y
