--- a/arch/arm/configs/dlx_defconfig
+++ b/arch/arm/configs/dlx_defconfig
@@ -157,7 +157,7 @@ CONFIG_HAVE_OPROFILE=y
 # CONFIG_JUMP_LABEL is not set
 CONFIG_HAVE_KPROBES=y
 CONFIG_HAVE_KRETPROBES=y
-CONFIG_HAVE_DMA_CONTIGUOUS=y
+CONFIG_HAVE_DMA_ATTRS=y
 CONFIG_USE_GENERIC_SMP_HELPERS=y
 CONFIG_HAVE_REGS_AND_STACK_ACCESS_API=y
 CONFIG_HAVE_CLK=y
@@ -1190,7 +1190,6 @@ CONFIG_GENLOCK_MISCDEVICE=y
 CONFIG_SYNC=y
 CONFIG_SW_SYNC=y
 # CONFIG_SW_SYNC_USER is not set
-# CONFIG_CMA is not set
 # CONFIG_CONNECTOR is not set
 # CONFIG_MTD is not set
 # CONFIG_PARPORT is not set
@@ -2444,6 +2443,13 @@ CONFIG_FB_SYS_FOPS=y
 CONFIG_FB_VIRTUAL=y
 # CONFIG_FB_METRONOME is not set
 # CONFIG_FB_BROADSHEET is not set
+
+#
+# Miscellaneous I2C Chip support II
+#
+CONFIG_FB_MSM_HDMI_MHL=y
+CONFIG_FB_MSM_HDMI_MHL_SII9234=y
+CONFIG_INTERNAL_CHARGING_SUPPORT=y
 CONFIG_MSM_VIDC_1080P=y
 CONFIG_MSM_VIDC_VENC=y
 CONFIG_MSM_VIDC_VDEC=y
