--- a/arch/arm/configs/crpalmer_defconfig
+++ b/arch/arm/configs/crpalmer_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.4.41 Kernel Configuration
+# Linux/arm 3.4.47 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -475,7 +475,7 @@ CONFIG_IOMMU_API=y
 CONFIG_MSM_GPIOMUX=y
 CONFIG_MSM_NATIVE_RESTART=y
 CONFIG_MSM_PM8X60=y
-ONFIG_MSM_EVENT_TIMER=y
+# CONFIG_MSM_EVENT_TIMER is not set
 CONFIG_MSM_BUS_SCALING=y
 CONFIG_MSM_BUS_RPM_MULTI_TIER_ENABLED=y
 CONFIG_MSM_WATCHDOG=y
@@ -522,8 +522,8 @@ CONFIG_MACH_MONARUDO=y
 CONFIG_HTC_HEADSET_ONE_WIRE=y
 CONFIG_SUPPORT_USB_SPEAKER=y
 CONFIG_SENSE_4_PLUS=y
-ONFIG_MSM_CPU_PWRCTL=y
 CONFIG_FORCE_FAST_CHARGE=y
+CONFIG_MSM_CPU_PWRCTL=y
 
 #
 # System MMU
@@ -1197,7 +1197,6 @@ CONFIG_GENLOCK_MISCDEVICE=y
 CONFIG_SYNC=y
 CONFIG_SW_SYNC=y
 # CONFIG_SW_SYNC_USER is not set
-# CONFIG_CMA is not set
 # CONFIG_CONNECTOR is not set
 # CONFIG_MTD is not set
 # CONFIG_PARPORT is not set
@@ -2432,7 +2431,7 @@ CONFIG_FB_MSM_MDP40=y
 # CONFIG_FB_MSM_MDDI is not set
 CONFIG_FB_MSM_MIPI_DSI=y
 # CONFIG_FB_MSM_LCDC is not set
-CONFIG_FB_MSM_LVDS=y
+# CONFIG_FB_MSM_LVDS is not set
 CONFIG_FB_MSM_OVERLAY=y
 CONFIG_FB_MSM_DTV=y
 # CONFIG_FB_MSM_EXTMDDI is not set
@@ -2444,14 +2443,12 @@ CONFIG_FB_MSM_DTV=y
 # CONFIG_FB_MSM_MDDI_AUTO_DETECT is not set
 # CONFIG_FB_MSM_LCDC_AUTO_DETECT is not set
 # CONFIG_FB_MSM_LCDC_PANEL is not set
-CONFIG_FB_MSM_MIPI_DSI_TOSHIBA=y
+# CONFIG_FB_MSM_MIPI_DSI_TOSHIBA is not set
 # CONFIG_FB_MSM_MIPI_DSI_LGIT is not set
 CONFIG_FB_MSM_MIPI_DSI_RENESAS=y
-CONFIG_FB_MSM_MIPI_DSI_TRULY=y
-CONFIG_FB_MSM_MIPI_DSI_SIMULATOR=y
-CONFIG_FB_MSM_MIPI_DSI_NOVATEK=y
-CONFIG_FB_MSM_MIPI_DSI_NT35510=y
-CONFIG_FB_MSM_MIPI_DSI_ORISE=y
+# CONFIG_FB_MSM_MIPI_DSI_SIMULATOR is not set
+# CONFIG_FB_MSM_MIPI_DSI_NOVATEK is not set
+# CONFIG_FB_MSM_MIPI_DSI_ORISE is not set
 CONFIG_FB_MSM_MIPI_DSI_TC358764_DSI2LVDS=y
 # CONFIG_FB_MSM_LCDC_ST15_WXGA is not set
 # CONFIG_FB_MSM_LCDC_ST15_PANEL is not set
@@ -2469,24 +2466,23 @@ CONFIG_FB_MSM_MIPI_DSI_TC358764_DSI2LVDS=y
 # CONFIG_FB_MSM_LCDC_NT35582_WVGA is not set
 # CONFIG_FB_MSM_LCDC_WXGA is not set
 # CONFIG_FB_MSM_MIPI_LGIT_VIDEO_WXGA_PT is not set
-CONFIG_FB_MSM_LVDS_CHIMEI_WXGA=y
-CONFIG_FB_MSM_MIPI_TOSHIBA_VIDEO_WVGA_PT=y
-CONFIG_FB_MSM_MIPI_TOSHIBA_VIDEO_WSVGA_PT=y
-CONFIG_FB_MSM_MIPI_TOSHIBA_VIDEO_WUXGA=y
-CONFIG_FB_MSM_MIPI_NOVATEK_VIDEO_QHD_PT=y
-CONFIG_FB_MSM_MIPI_NOVATEK_CMD_QHD_PT=y
-CONFIG_FB_MSM_MIPI_ORISE_VIDEO_720P_PT=y
-CONFIG_FB_MSM_MIPI_ORISE_CMD_720P_PT=y
+# CONFIG_FB_MSM_LVDS_CHIMEI_WXGA is not set
+# CONFIG_FB_MSM_MIPI_TOSHIBA_VIDEO_WVGA_PT is not set
+# CONFIG_FB_MSM_MIPI_TOSHIBA_VIDEO_WSVGA_PT is not set
+# CONFIG_FB_MSM_MIPI_TOSHIBA_VIDEO_WUXGA is not set
+# CONFIG_FB_MSM_MIPI_NOVATEK_VIDEO_QHD_PT is not set
+# CONFIG_FB_MSM_MIPI_NOVATEK_CMD_QHD_PT is not set
+# CONFIG_FB_MSM_MIPI_ORISE_VIDEO_720P_PT is not set
+# CONFIG_FB_MSM_MIPI_ORISE_CMD_720P_PT is not set
 CONFIG_FB_MSM_MIPI_RENESAS_VIDEO_FWVGA_PT=y
-CONFIG_FB_MSM_MIPI_RENESAS_CMD_FWVGA_PT=y
-CONFIG_FB_MSM_MIPI_NT35510_VIDEO_WVGA_PT=y
-CONFIG_FB_MSM_MIPI_NT35510_CMD_WVGA_PT=y
+# CONFIG_FB_MSM_MIPI_RENESAS_CMD_FWVGA_PT is not set
+# CONFIG_FB_MSM_MIPI_NT35510_VIDEO_WVGA_PT is not set
+# CONFIG_FB_MSM_MIPI_NT35510_CMD_WVGA_PT is not set
 # CONFIG_FB_MSM_MIPI_NT35516_VIDEO_QHD_PT is not set
 # CONFIG_FB_MSM_MIPI_NT35516_CMD_QHD_PT is not set
 CONFIG_FB_MSM_MIPI_CHIMEI_WXGA=y
 CONFIG_FB_MSM_MIPI_CHIMEI_WUXGA=y
-CONFIG_FB_MSM_MIPI_TRULY_VIDEO_WVGA_PT=y
-CONFIG_FB_MSM_MIPI_SIMULATOR_VIDEO=y
+# CONFIG_FB_MSM_MIPI_SIMULATOR_VIDEO is not set
 CONFIG_FB_MSM_NO_MDP_PIPE_CTRL=y
 CONFIG_FB_MSM_OVERLAY0_WRITEBACK=y
 CONFIG_FB_MSM_OVERLAY1_WRITEBACK=y
@@ -2508,13 +2504,13 @@ CONFIG_FB_MSM_WRITEBACK_MSM_PANEL=y
 # CONFIG_FB_MSM_MDDI_PANEL_AUTO_DETECT is not set
 # CONFIG_FB_MSM_LCDC_PANEL_AUTO_DETECT is not set
 # CONFIG_FB_MSM_LCDC_MIPI_PANEL_AUTO_DETECT is not set
-CONFIG_FB_MSM_LVDS_MIPI_PANEL_DETECT=y
+# CONFIG_FB_MSM_LVDS_MIPI_PANEL_DETECT is not set
 # CONFIG_FB_MSM_MDDI_PRISM_WVGA is not set
 # CONFIG_FB_MSM_MDDI_TOSHIBA_WVGA_PORTRAIT is not set
 # CONFIG_FB_MSM_MDDI_TOSHIBA_VGA is not set
 # CONFIG_FB_MSM_MDDI_TOSHIBA_WVGA is not set
 # CONFIG_FB_MSM_MDDI_SHARP_QVGA_128x128 is not set
-# CONFIG_FB_MSM_MIPI_RENESAS_VIDEO_FWVGA_PT_PANEL is not set
+# CONFIG_FB_MSM_MIPI_LGIT_VIDEO_WXGA_PT_PANEL is not set
 # CONFIG_FB_MSM_MIPI_TOSHIBA_VIDEO_WVGA_PT_PANEL is not set
 # CONFIG_FB_MSM_MIPI_TOSHIBA_VIDEO_WSVGA_PT_PANEL is not set
 # CONFIG_FB_MSM_MIPI_TOSHIBA_VIDEO_WUXGA_PANEL is not set
